--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -3,4 +3,5 @@ resources:
 - rhmi.cr.yaml
 - integreatly-rhmi-cr.yaml
 - rhmiconfig.yaml
+- apimanagementtenant.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
