--- a/config/manifests-multitenant-rhoam/bases/managed-api-service.clusterserviceversion.yaml
+++ b/config/manifests-multitenant-rhoam/bases/managed-api-service.clusterserviceversion.yaml
@@ -7,12 +7,12 @@ metadata:
     capabilities: Basic Install
     categories: "Integration & Delivery"
     certified: "false"
-    containerImage: quay.io/integreatly/multitenant-managed-api-service:rhoam-v1.1.0
+    containerImage: quay.io/integreatly/managed-api-service:rhoam-v1.1.0
     operators.operatorframework.io/builder: operator-sdk-v1.2.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v2
     olm.properties: '[{"type": "olm.maxOpenShiftVersion", "value": "4.10"}]'
     support: RHOAM
-  name: multitenant-managed-api-service.v1.22.0
+  name: managed-api-service.v1.23.0
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -130,7 +130,7 @@ spec:
     alm-owner-rhoam: rhoam-operator
     operated-by: rhoam-operator
   maintainers:
-    - email: rhoam-support@redhat.com
+    - email: rhoam-sandbox@redhat.com
       name: rhoam
   links: []
   maturity: alpha
@@ -140,4 +140,5 @@ spec:
     matchLabels:
       alm-owner-rhoam: rhoam-operator
       operated-by: rhoam-operator
-  version: 1.22.0
+  version: 1.23.0
+  replaces: managed-api-service.v1.22.0
