--- a/bundles/multitenant-managed-api-service/1.23.0/manifests/managed-api-service.clusterserviceversion.yaml
+++ b/bundles/multitenant-managed-api-service/1.23.0/manifests/managed-api-service.clusterserviceversion.yaml
@@ -60,7 +60,7 @@ metadata:
     capabilities: Basic Install
     categories: Integration & Delivery
     certified: "false"
-    containerImage: quay.io/integreatly/managed-api-service:rhoam-cpaas-1.23.0
+    containerImage: quay.io/vmogilev_rhmi/managed-api-service:rhoam-cpaas-1.23.0
     olm.properties: '[{"type": "olm.maxOpenShiftVersion", "value": "4.10"}]'
     operatorframework.io/suggested-namespace: sandbox-rhoam-operator
     operators.operatorframework.io/builder: operator-sdk-v1.11.0+git
@@ -555,7 +555,7 @@ spec:
                         value: noreply-alert@rhmw.io
                       - name: QUOTA
                         value: "200"
-                    image: quay.io/integreatly/managed-api-service:rhoam-cpaas-1.23.0
+                    image: quay.io/vmogilev_rhmi/managed-api-service:rhoam-cpaas-1.23.0
                     imagePullPolicy: Always
                     name: rhmi-operator
                     ports:
@@ -755,7 +755,7 @@ spec:
   maturity: alpha
   provider:
     name: rhoam
-  replaces: managed-api-service.v1.22.0
+  #replaces: managed-api-service.v1.22.0
   selector:
     matchLabels:
       alm-owner-rhoam: rhoam-operator
