MGDAPI-6417 - TEST of CRO 1.1.4

--- a/bundles/managed-api-service/1.40.0/manifests/managed-api-service.clusterserviceversion.yaml
+++ b/bundles/managed-api-service/1.40.0/manifests/managed-api-service.clusterserviceversion.yaml
@@ -865,7 +865,7 @@ spec:
   maturity: alpha
   provider:
     name: rhoam
-  replaces: managed-api-service.v1.39.0
+  #replaces: managed-api-service.v1.39.0
   selector:
     matchLabels:
       alm-owner-rhoam: rhoam-operator
